--- a/ansible/roles/ocp4-workload-ccnrd/templates/devfile.json.j2
+++ b/ansible/roles/ocp4-workload-ccnrd/templates/devfile.json.j2
@@ -48,7 +48,7 @@
     {
       "alias": "mta-ide-plugin",
       "type": "chePlugin",
-      "reference": "https://raw.githubusercontent.com/redhat-cop/agnosticd/development/ansible/roles/ocp4-workload-ccnrd/files/cheplugin-meta.yaml",
+      "reference": "{{ wzh_web_server }}/ccn/cheplugin-meta.yaml",
       "memoryLimit": "1500M"
     }
   ],
