--- a/ansible/roles/ocp4-workload-ccnrd/templates/cheplugin-meta.yaml.j2
+++ b/ansible/roles/ocp4-workload-ccnrd/templates/cheplugin-meta.yaml.j2
@@ -5,7 +5,7 @@ name: rhamt-demo
 displayName: Migration Toolkit
 title: Migration Toolkit for Applications (MTA)
 description: Migration Toolkit for Applications (MTA)
-icon: {{ wzh_web_server }}/ccn/logo-eclipseche.svg
+icon: http://{{ wzh_web_server }}/ccn/logo-eclipseche.svg
 publisher: ccn
 repository: https://github.com/redhat-cop/agnosticd/tree/development/ansible/roles/ocp4-workload-ccnrd
 category: Other
@@ -33,4 +33,4 @@ spec:
         - name: rhamt-vscode
           mountPath: "/home/theia/home/theia/redhat.mta-vscode-extension"
   extensions:
-    - {{ wzh_web_server }}/ccn/mta-vscode-extension-0.0.48-662.vsix
+    - http://{{ wzh_web_server }}/ccn/mta-vscode-extension-0.0.48-662.vsix
