mta vscode extension disconnected

--- a/ansible/roles/ocp4-workload-ccnrd/templates/cheplugin-meta.yaml.j2
+++ b/ansible/roles/ocp4-workload-ccnrd/templates/cheplugin-meta.yaml.j2
@@ -33,4 +33,4 @@ spec:
         - name: rhamt-vscode
           mountPath: "/home/theia/home/theia/redhat.mta-vscode-extension"
   extensions:
-    - http://{{ wzh_web_server }}/ccn/mta-vscode-extension-0.0.48-662.vsix
+    - http://{{ wzh_web_server }}/ccn/mta-vscode-extension.vsix
