--- a/ansible/roles/ocp4-workload-ccnrd/templates/cheplugin-meta.yaml.j2
+++ b/ansible/roles/ocp4-workload-ccnrd/templates/cheplugin-meta.yaml.j2
@@ -7,7 +7,7 @@ title: Migration Toolkit for Applications (MTA)
 description: Migration Toolkit for Applications (MTA)
 icon: http://{{ wzh_web_server }}/ccn/logo-eclipseche.svg
 publisher: ccn
-repository: https://github.com/redhat-cop/agnosticd/tree/development/ansible/roles/ocp4-workload-ccnrd
+repository: https://raw.githubusercontent.com/windup/rhamt-che-demo/master/meta.yaml
 category: Other
 firstPublicationDate: "2020-09-03"
 spec:
@@ -23,12 +23,12 @@ spec:
     attributes:
       protocol: http
   containers:
-    - image: "quay.io/openshiftlabs/rhamt-vscode-extension:java11"
+    - image: "docker.io/wangzheng422/imgs:mta-vscode-extension.base-2020-12-30-1340"
       name: rhamt-extension
       mountSources: true
       ports:
-        - exposedPort: 61435
         - exposedPort: 61436
+        - exposedPort: 61435
       volumes:
         - name: rhamt-vscode
           mountPath: "/home/theia/home/theia/redhat.mta-vscode-extension"
